--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.0.0",
     "next": "10.1.3",
+    "next-themes": "^0.0.14",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
