--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@animated-burgers/burger-squeeze": "^1.1.2",
     "@headlessui/react": "^1.0.0",
+    "classnames": "^2.2.6",
     "next": "10.1.3",
     "next-themes": "^0.0.14",
     "react": "17.0.2",
