--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "10.1.3",
     "next-themes": "^0.0.14",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-sound": "^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
