--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
     "@headlessui/react": "^1.0.0",
+    "canvas-confetti": "^1.4.0",
     "classnames": "^2.2.6",
     "next": "10.1.3",
     "next-themes": "^0.0.14",
