--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "next": "10.1.3",
     "next-themes": "^0.0.14",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "use-sound": "^2.0.2"
