--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@headlessui/react": "^1.0.0",
     "canvas-confetti": "^1.4.0",
     "classnames": "^2.2.6",
-    "next": "10.1.3",
+    "next": "^10.2.0",
     "next-themes": "^0.0.14",
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
