--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas-confetti": "^1.4.0",
     "classnames": "^2.2.6",
     "next": "^10.2.0",
+    "next-fonts": "^1.5.1",
     "next-themes": "^0.0.14",
     "node-fetch": "^2.6.1",
     "react": "17.0.2",
