--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@animated-burgers/burger-squeeze": "^1.1.2",
     "@headlessui/react": "^1.0.0",
+    "@notionhq/client": "^0.1.8",
     "canvas-confetti": "^1.4.0",
     "classnames": "^2.2.6",
+    "date-fns": "^2.21.3",
+    "dotenv": "^10.0.0",
     "next": "^10.2.0",
     "next-fonts": "^1.5.1",
     "next-themes": "^0.0.14",
