--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.21.3",
     "dotenv": "^10.0.0",
-    "next": "^10.2.0",
+    "next": "^11.0.1",
     "next-fonts": "^1.5.1",
     "next-themes": "^0.0.14",
     "node-fetch": "^2.6.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "use-sound": "^2.0.2"
   },
   "devDependencies": {
